chore(bukkit): Test Server