@@ -1,7 +1,10 @@
 //file:noinspection GroovyAssignabilityCheck
 //file:noinspection GroovyAccessibility
+import xyz.jpenilla.runtask.task.AbstractRun
+
 plugins {
     id 'java'
+    id "xyz.jpenilla.run-paper" version "2.3.1"
     id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
@@ -113,6 +116,49 @@ tasks {
             include "*.jar"
         }
     }
-}
 
-tasks.register('prepareKotlinBuildScriptModel') {}
+    runServer {
+        minecraftVersion("1.20.2")
+
+        downloadPlugins {
+            // AdriAPI
+            modrinth("adriapi", "2.0.1")
+
+            // ViaVersion
+            hangar("ViaVersion", "5.0.3")
+
+            // PlaceholderAPI
+            url("https://github.com/PlaceholderAPI/PlaceholderAPI/releases/download/2.11.4/PlaceholderAPI-2.11.4.jar")
+
+            // PlugmanX
+            url("https://github.com/Test-Account666/PlugManX/releases/download/2.4.1/PlugManX-2.4.1.jar")
+
+            // LuckPerms
+            url("https://download.luckperms.net/1567/bukkit/loader/LuckPerms-Bukkit-5.4.150.jar")
+        }
+    }
+
+    tasks.withType(AbstractRun).configureEach {
+        javaLauncher = javaToolchains.launcherFor {
+            vendor = JvmVendorSpec.JETBRAINS
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+        jvmArgs(
+                // Hot Swap
+                "-XX:+AllowEnhancedClassRedefinition",
+
+                // Aikar Flags
+                "--add-modules=jdk.incubator.vector", "-XX:+UseG1GC", "-XX:+ParallelRefProcEnabled",
+                "-XX:MaxGCPauseMillis=200", "-XX:+UnlockExperimentalVMOptions", "-XX:+DisableExplicitGC",
+                "-XX:+AlwaysPreTouch", "-XX:G1NewSizePercent=30", "-XX:G1MaxNewSizePercent=40",
+                "-XX:G1HeapRegionSize=8M", "-XX:G1ReservePercent=20", "-XX:G1HeapWastePercent=5",
+                "-XX:G1MixedGCCountTarget=4", "-XX:InitiatingHeapOccupancyPercent=15",
+                "-XX:G1MixedGCLiveThresholdPercent=90", "-XX:G1RSetUpdatingPauseTimePercent=5",
+                "-XX:SurvivorRatio=32", "-XX:+PerfDisableSharedMem", "-XX:MaxTenuringThreshold=1",
+                "-Dusing.aikars.flags=https://mcflags.emc.gs", "-Daikars.new.flags=true"
+        )
+
+    }
+
+    tasks.register('prepareKotlinBuildScriptModel') {}
+}
